--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- 
     - favicon
   -->
-    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="shortcut icon" href="./logo.png" type="image/png" />
 
     <!-- 
     - custom css link
@@ -56,12 +56,8 @@
     <header class="header" data-header>
       <div class="container">
         <a href="#" class="logo">
-          <img
-            src="./assets/images/logo.svg"
-            width="162"
-            height="50"
-            alt="EduWeb logo"
-          />
+          <img src="./logo.png" width="50" height="30" alt="Learn sky logo" />
+          <span class="logo-text">Learn Sky Technology</span>
         </a>
 
         <nav class="navbar" data-navbar>
@@ -158,14 +154,23 @@
         >
           <div class="container">
             <div class="hero-content">
-              <h1 class="h1 section-title">
-                The Best Program to <span class="span">Enroll</span> for
-                Exchange
+              <h1
+                class="section-title"
+                style="
+                  font-weight: bold;
+                  color: black;
+                  font-size: 25px !important;
+                "
+              >
+                At <span class="span">Learn Sky Technology</span> we offer
+                essential software development training for all skill levels,
+                helping everyone excel in tech.
               </h1>
 
               <p class="hero-text">
-                Excepteur sint occaecat cupidatat non proident sunt in culpa qui
-                officia deserunt mollit.
+                Empower your future with expert-led software training, from
+                beginner to advanced levels, enhancing your skills and career in
+                tech.
               </p>
 
               <a href="#" class="btn has-before">
