--- a/index.html
+++ b/index.html
@@ -55,20 +55,66 @@
 
     <header class="header" data-header>
       <div class="container">
-        <a href="#" class="logo">
-          <img src="./logo.png" width="50" height="30" alt="Learn sky logo" />
-          <span class="logo-text">Learn Sky Technology</span>
+        <a
+          href="#"
+          class="logo"
+          style="
+            display: flex !important;
+            align-items: center !important;
+            text-decoration: none !important;
+          "
+        >
+          <img
+            src="./logo.png"
+            width="50"
+            height="30"
+            alt="Learn sky logo"
+            style="margin-right: 10px !important"
+          />
+          <span
+            class="logo-text"
+            style="
+              font-size: 20px !important;
+              font-weight: bold !important;
+              color: #3c3c3c !important;
+              font-family: 'Arial', sans-serif !important;
+            "
+            onmouseover="this.style.color='#1AB79D'; this.style.textDecoration='none';"
+            onmouseout="this.style.color='#3c3c3c'; this.style.textDecoration='none';"
+            >Learn Sky Technology</span
+          >
         </a>
 
         <nav class="navbar" data-navbar>
           <div class="wrapper">
-            <a href="#" class="logo">
+            <a
+              href="#"
+              class="logo"
+              style="
+                display: flex !important;
+                align-items: center !important;
+                text-decoration: none !important;
+              "
+            >
               <img
-                src="./assets/images/logo.svg"
-                width="162"
-                height="50"
-                alt="EduWeb logo"
+                src="./logo.png"
+                width="50"
+                height="30"
+                alt="Learn sky logo"
+                style="margin-right: 10px !important"
               />
+              <span
+                class="logo-text"
+                style="
+                  font-size: 15px !important;
+                  font-weight: bold !important;
+                  color: #3c3c3c !important;
+                  font-family: 'Arial', sans-serif !important;
+                "
+                onmouseover="this.style.color='#1AB79D'; this.style.textDecoration='none';"
+                onmouseout="this.style.color='#3c3c3c'; this.style.textDecoration='none';"
+                >Learn Sky Technology</span
+              >
             </a>
 
             <button
