--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
             </li>
 
             <li class="navbar-item">
-              <a href="#about" class="navbar-link" data-nav-link>About</a>
+              <a href="#category" class="navbar-link" data-nav-link
+                >Categories</a
+              >
             </li>
 
             <li class="navbar-item">
@@ -141,6 +143,10 @@
 
             <li class="navbar-item">
               <a href="#blog" class="navbar-link" data-nav-link>Blog</a>
+            </li>
+
+            <li class="navbar-item">
+              <a href="#about" class="navbar-link" data-nav-link>About</a>
             </li>
 
             <li class="navbar-item">
@@ -251,7 +257,7 @@
               </div>
 
               <img
-                src="./assets/images/hero-shape-1.svg"
+                src="./assets/images/onlinesup.png"
                 width="380"
                 height="190"
                 alt=""
@@ -273,7 +279,7 @@
         - #CATEGORY
       -->
 
-        <section class="section category" aria-label="category">
+        <section class="section category" id="category" aria-label="category">
           <div class="container">
             <p class="section-subtitle">Categories</p>
 
@@ -282,7 +288,8 @@
             </h2>
 
             <p class="section-text">
-              Consectetur adipiscing elit sed do eiusmod tempor.
+              Providing high-quality education through innovative online
+              classes.
             </p>
 
             <ul class="grid-list">
@@ -290,7 +297,7 @@
                 <div class="category-card" style="--color: 170, 75%, 41%">
                   <div class="card-icon">
                     <img
-                      src="./assets/images/category-1.svg"
+                      src="./assets/images/development1.png"
                       width="40"
                       height="40"
                       loading="lazy"
@@ -300,11 +307,12 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Online Degree Programs</a>
+                    <a href="#" class="card-title">Software Development</a>
                   </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor consec tur elit adicing sed umod tempor.
+                    Learn the latest in software development through our
+                    comprehensive courses.
                   </p>
 
                   <span class="card-badge">7 Courses</span>
@@ -315,7 +323,7 @@
                 <div class="category-card" style="--color: 351, 83%, 61%">
                   <div class="card-icon">
                     <img
-                      src="./assets/images/category-2.svg"
+                      src="./assets/images/testing.png"
                       width="40"
                       height="40"
                       loading="lazy"
@@ -325,11 +333,12 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Non-Degree Programs</a>
+                    <a href="#" class="card-title">Software Testing Programs</a>
                   </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor consec tur elit adicing sed umod tempor.
+                    Master the essentials of software testing with our
+                    expert-led programs.
                   </p>
 
                   <span class="card-badge">4 Courses</span>
@@ -340,7 +349,7 @@
                 <div class="category-card" style="--color: 229, 75%, 58%">
                   <div class="card-icon">
                     <img
-                      src="./assets/images/category-3.svg"
+                      src="./assets/images/dataAnalyst.png"
                       width="40"
                       height="40"
                       loading="lazy"
@@ -350,11 +359,11 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Off-Campus Programs</a>
+                    <a href="#" class="card-title">Data Analyst Programs</a>
                   </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor consec tur elit adicing sed umod tempor.
+                    Become a skilled data analyst with our training programs.
                   </p>
 
                   <span class="card-badge">8 Courses</span>
@@ -365,7 +374,7 @@
                 <div class="category-card" style="--color: 42, 94%, 55%">
                   <div class="card-icon">
                     <img
-                      src="./assets/images/category-4.svg"
+                      src="./assets/images/Ai.png"
                       width="40"
                       height="40"
                       loading="lazy"
@@ -375,11 +384,14 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Hybrid Distance Programs</a>
+                    <a href="#" class="card-title"
+                      >Artificial Intelligence Programs</a
+                    >
                   </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor consec tur elit adicing sed umod tempor.
+                    Explore cutting-edge AI techniques with our specialized
+                    programs.
                   </p>
 
                   <span class="card-badge">8 Courses</span>
@@ -439,13 +451,14 @@
               <p class="section-subtitle">About Us</p>
 
               <h2 class="h2 section-title">
-                Over 10 Years in <span class="span">Distant learning</span> for
+                Transforming <span class="span">Distant Learning</span> for
                 Skill Development
               </h2>
 
               <p class="section-text">
-                Lorem ipsum dolor sit amet consectur adipiscing elit sed eiusmod
-                ex tempor incididunt labore dolore magna aliquaenim ad minim.
+                Learn Sky Technology offers innovative distant learning and
+                skill development solutions. Empowering individuals with quality
+                education.
               </p>
 
               <ul class="about-list">
@@ -1029,37 +1042,40 @@
           <div class="footer-brand">
             <a href="#" class="logo">
               <img
-                src="./assets/images/logo-light.svg"
-                width="162"
-                height="50"
-                alt="EduWeb logo"
+                src="./logo.png"
+                width="50"
+                height="30"
+                alt="Learn sky logo"
               />
             </a>
 
             <p class="footer-brand-text">
-              Lorem ipsum dolor amet consecto adi pisicing elit sed eiusm tempor
-              incidid unt labore dolore.
+              Learn Sky Technology is a pioneering startup dedicated to
+              revolutionizing distant learning for skill development. Our
+              mission is to provide innovative and effective learning solutions
+              that empower individuals and professionals to excel in the digital
+              age.
             </p>
 
             <div class="wrapper">
               <span class="span">Add:</span>
 
-              <address class="address">70-80 Upper St Norwich NR2</address>
+              <address class="address">
+                No:270/3A, Iyyancherry Main Road, Urapakkam - 603 210
+              </address>
             </div>
 
             <div class="wrapper">
               <span class="span">Call:</span>
 
-              <a href="tel:+011234567890" class="footer-link"
-                >+01 123 4567 890</a
-              >
+              <a href="tel:9363229539" class="footer-link">+9363229539</a>
             </div>
 
             <div class="wrapper">
               <span class="span">Email:</span>
 
-              <a href="mailto:info@eduweb.com" class="footer-link"
-                >info@eduweb.com</a
+              <a href="mailto:admin@learnskytech.com" class="footer-link"
+                >admin@learnskytech.com</a
               >
             </div>
           </div>
@@ -1153,7 +1169,11 @@
 
             <ul class="social-list">
               <li>
-                <a href="#" class="social-link">
+                <a
+                  href="https://www.facebook.com/profile.php?id=61554844687421"
+                  class="social-link"
+                  target="_blank"
+                >
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
               </li>
@@ -1165,19 +1185,31 @@
               </li>
 
               <li>
-                <a href="#" class="social-link">
+                <a
+                  href="https://www.instagram.com/learnsky001/"
+                  class="social-link"
+                  target="_blank"
+                >
                   <ion-icon name="logo-instagram"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="#" class="social-link">
+                <a
+                  href="https://x.com/learn_sky001"
+                  class="social-link"
+                  target="_blank"
+                >
                   <ion-icon name="logo-twitter"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="#" class="social-link">
+                <a
+                  href="https://www.youtube.com/@LearnSkyTechnology-d9s"
+                  class="social-link"
+                  target="_blank"
+                >
                   <ion-icon name="logo-youtube"></ion-icon>
                 </a>
               </li>
@@ -1189,8 +1221,8 @@
       <div class="footer-bottom">
         <div class="container">
           <p class="copyright">
-            Copyright 2022 All Rights Reserved by
-            <a href="#" class="copyright-link">codewithsadee</a>
+            © Copyright 2024 All Rights Reserved by
+            <a href="#" class="copyright-link">@Learn Sky Technology</a>
           </p>
         </div>
       </div>
