--- a/index.html
+++ b/index.html
@@ -1046,43 +1046,115 @@
               goals!
             </p>
             <h2 class="h2 section-title">Enroll Now</h2>
-            <div class="formcontainer">
-              <form id="inquiry-form">
-                <div style="margin-top: 10px">
-                  <label for="name" class="formlabel">Full Name:</label>
+            <div
+              class="formcontainer"
+              style="
+                max-width: 600px;
+                margin: 0 auto;
+                padding: 20px;
+                background-color: #f6f6f6;
+                border-radius: 8px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+              "
+            >
+              <form
+                id="inquiry-form"
+                style="display: flex; flex-direction: column"
+              >
+                <div style="margin-top: 10px; margin-bottom: 15px">
+                  <label
+                    for="name"
+                    style="
+                      margin-bottom: 5px;
+                      font-weight: bold;
+                      color: #1ab79d;
+                    "
+                    >Full Name:</label
+                  >
                   <input
                     type="text"
                     id="name"
                     name="name"
-                    class="formfields"
+                    style="
+                      width: 100%;
+                      padding: 3px;
+                      margin-top: 5px;
+                      border: 1px solid #ddd;
+                      border-radius: 4px;
+                    "
                     required
                   />
                 </div>
-                <div>
-                  <label for="email" class="formlabel">Email:</label>
+                <div style="margin-bottom: 15px">
+                  <label
+                    for="email"
+                    style="
+                      margin-bottom: 5px;
+                      font-weight: bold;
+                      color: #1ab79d;
+                    "
+                    >Email:</label
+                  >
                   <input
                     type="email"
                     id="email"
                     name="email"
-                    class="formfields"
+                    style="
+                      width: 100%;
+                      padding: 3px;
+                      margin-top: 5px;
+                      border: 1px solid #ddd;
+                      border-radius: 4px;
+                    "
                     required
                   />
                 </div>
-                <div>
-                  <label for="phone" class="formlabel">Phone Number:</label>
+                <div style="margin-bottom: 15px">
+                  <label
+                    for="phone"
+                    style="
+                      margin-bottom: 5px;
+                      font-weight: bold;
+                      color: #1ab79d;
+                    "
+                    >Phone Number:</label
+                  >
                   <input
                     type="tel"
                     id="phone"
                     name="phone"
-                    class="formfields"
+                    style="
+                      width: 100%;
+                      padding: 3px;
+                      margin-top: 5px;
+                      border: 1px solid #ddd;
+                      border-radius: 4px;
+                    "
                     required
                   />
                 </div>
-                <div>
-                  <label for="course" class="formlabel"
+                <div style="margin-bottom: 15px">
+                  <label
+                    for="course"
+                    style="
+                      margin-bottom: 5px;
+                      font-weight: bold;
+                      color: #1ab79d;
+                    "
                     >Course of Interest:</label
                   >
-                  <select id="course" name="course" class="formfields" required>
+                  <select
+                    id="course"
+                    name="course"
+                    style="
+                      width: 100%;
+                      padding: 10px;
+                      margin-top: 5px;
+                      border: 1px solid #ddd;
+                      border-radius: 4px;
+                    "
+                    required
+                  >
                     <option value="software-development">
                       Software Development
                     </option>
@@ -1093,17 +1165,48 @@
                     </option>
                   </select>
                 </div>
-                <div>
-                  <label for="message" class="formlabel">Message:</label>
+                <div style="margin-bottom: 15px">
+                  <label
+                    for="message"
+                    style="
+                      margin-bottom: 5px;
+                      font-weight: bold;
+                      color: #1ab79d;
+                    "
+                    >Message:</label
+                  >
                   <textarea
                     id="message"
                     name="message"
                     rows="4"
                     placeholder="Any specific queries or requirements?"
-                    class="formfields"
+                    style="
+                      width: 100%;
+                      padding: 3px;
+                      margin-top: 5px;
+                      border: 1px solid #ddd;
+                      border-radius: 4px;
+                    "
                   ></textarea>
                 </div>
-                <button type="submit" class="formfields formBtn">Submit</button>
+                <button
+                  type="submit"
+                  style="
+                    background-color: #007bff;
+                    color: white;
+                    border: none;
+                    cursor: pointer;
+                    border-radius: 8px;
+                    width: 100%;
+                    padding: 3px;
+                    margin-top: 5px;
+                    border: 1px solid #ddd;
+                  "
+                  onmouseover="this.style.backgroundColor='#0056b3';"
+                  onmouseout="this.style.backgroundColor='#007bff';"
+                >
+                  Submit
+                </button>
               </form>
             </div>
           </div>
